# sunstead-hack

./: .gitignore  .mcp.json  CLAUDE.md  README.md  run-dev.sh
design/: index.html
docs/: BACKEND_INTEGRATION.md  COMPANION.md  CREATOR_ROOM_IMAGE_PROMPT.md  CREATOR_ROOM_KIT.md  CREATOR_ROOM_PLAN.md  DATA_MODEL.md  DECISIONS.md  FEASIBILITY.md  INTEGRATION_NOTES.md  NEXT_STEPS.md  PROJECT_OVERVIEW.md  RAINY_ARCHITECTURE.md  RUNNING.md  agency-dashboard.md  architecture.md  brainstorm-elevenlabs-features.md  communication-architecture.md  session-log-2026-06-26.md  ugc-coaching-exploration.md  ugc-review-loop.md
knowledge-base/: README.md
knowledge-base/ai-on-device/: foundation-models-as-agent-driver.md  foundation-models-v3.md  speech-framework.md  vision-framework.md  writing-tools-app-intents.md
knowledge-base/apple-platform/: liquid-glass-swiftui.md  macos-27-golden-gate.md  menu-bar-app.md  swiftui-macos-app-structure.md  wwdc-2026-developer-tools.md
knowledge-base/architecture-patterns/: persistence-shared-store.md  pipeline-feasibility-and-caveats.md  python-sidecar-in-mac-app.md  realtime-agent-loop.md  realtime-app-ipc.md  scene-analysis-pipeline.md  video-download-pipeline.md  webview-shell-and-data-path.md
knowledge-base/canvas/: creator-room.md  infinite-canvas-swiftui.md  live-collaboration-architecture.md  tldraw-nextjs-integration.md
knowledge-base/mcp/: fastmcp.md  mcp-protocol.md  (+1 more)
mcp-server/: README.md  pyproject.toml  schema.sql
mcp-server/rainy_mcp/: __init__.py  db.py  events.py  server.py
reviews/: ecosia-hooks-week-of-2-june-2026.md
(+140 files in other folders)
