[project]
name = "rainy-mcp"
version = "0.1.0"
description = "Rainy's MCP server — exposes app data + the infinite canvas to Claude Code and the real-time router."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.4,<4",
]

[project.optional-dependencies]
# The local media pipeline (download + scene detection). Kept optional so the core
# server can run without heavy media deps during early development.
media = [
    "yt-dlp>=2025.6.0",
    "scenedetect[opencv]>=0.6.4",
    "av>=12.0.0",
]
dev = [
    "ruff>=0.6",
    "pytest>=8",
]

[project.scripts]
rainy-mcp = "rainy_mcp.server:main"

[tool.uv]
# Managed with uv. See ../knowledge-base/architecture-patterns/python-sidecar-in-mac-app.md
# for how this is bundled (standalone CPython in Contents/Resources/) for distribution.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rainy_mcp"]
